# vatsim-emergency-bot

./: Dockerfile  README.md  logger.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint_and_type_check.yaml
data/: airlines.json  airports.json  types.json
