[tool.poetry]
name = "vatsim-emergency-bot"
version = "0.1.0"
description = "Send alert to Telegram if aircraft reported emergency on the vatsim network (squawk 7600, 7700)"
authors = ["sijokun", "benzlokzik"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "vatsim_emergency_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.28.2,<2.29.0"
pytelegrambotapi = ">=4.10.0,<4.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
